# db-dump

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  install.yml  load.yml
chart/: .gitignore  total-downloads.tex  user-downloads.tex
concat/: Cargo.toml  main.rs
examples/: crate-downloads.rs  find-timestamp.rs  industry-coefficient.rs  load-all.rs  top-crates.rs  total-downloads.rs  user-dependencies-graph.rs  user-dependencies.rs  user-downloads.rs
src/: badges.rs  bool.rs  categories.rs  crate_downloads.rs  crate_owners.rs  crates.rs  crates_categories.rs  crates_keywords.rs  date.rs  datetime.rs  default_versions.rs  deleted_crates.rs  dependencies.rs  error.rs  ignore.rs  index.rs  keywords.rs  lib.rs  load.rs  metadata.rs  reserved_crate_names.rs  set.rs  teams.rs  users.rs  version_authors.rs  version_downloads.rs  versions.rs
