[package]
name = "db-dump"
version = "0.4.6" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "database"]
description = "Library for scripting analyses against crates.io's database dumps"
documentation = "https://docs.rs/db-dump"
edition = "2018"
keywords = ["crates-io"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/db-dump"

[dependencies]
chrono = "0.4.26"
csv = "1.2.2"
flate2 = "1.0.26"
fnv = "1.0.7"
indicatif = "0.17.5"
memmap = "0.7"
once_cell = "1.18"
semver = { version = "1.0.17", features = ["serde"] }
serde = "1.0.166"
serde_derive = "1.0.166"
serde_json = "1.0.99"
tar = "0.4.38"

[lib]
doc-scrape-examples = false

[workspace]
members = ["concat"]
