[package]
name = "db-dump"
version = "0.7.13"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "database"]
description = "Library for scripting analyses against crates.io's database dumps"
documentation = "https://docs.rs/db-dump"
edition = "2021"
exclude = ["build.rs"]
keywords = ["crates-io"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/db-dump"

[dependencies]
chrono = "0.4.34"
csv = "1.2.2"
flate2 = "1.0.26"
indicatif = "0.18"
memmap = "0.7"
semver = { version = "1.0.17", features = ["serde"] }
serde = "1.0.194"
serde_derive = "1.0.194"
serde_json = "1.0.110"
tar = "0.4.38"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]

[workspace]
members = ["concat"]
