[package]
name = "db-dump-concat"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"

[[bin]]
name = "db-dump-concat"
path = "main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2.5", default-features = false, features = ["deprecated", "derive", "std", "suggestions"] }
csv = "1.1"
flate2 = "1.0"
glob = "0.3"
memmap = "0.7"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
