[package]
name = "db-dump-concat"
version = "0.1.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "database"]
description = "Tool to concatenate crates.io database dumps"
edition = "2021"
keywords = ["crates-io"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/db-dump"

[[bin]]
name = "db-dump-concat"
path = "main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["deprecated", "derive"] }
csv = "1.1"
flate2 = "1.0"
glob = "0.3"
memmap = "0.7"
serde = "1.0"
serde_derive = "1.0"
tar = "0.4"
